--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
   "description": "",
   "main": "server.js",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.10.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
