--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,33 @@
 {
-  "dependencies": {
-    "colors": "^1.4.0",
-    "cookie-parser": "^1.4.7",
-    "cookies": "^0.9.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "http": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.2",
-    "socket.io": "^4.8.1"
-  },
-  "name": "farmer-connect",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "devDependencies": {
-    "nodemon": "^3.1.10",
-    "prisma": "^6.10.1"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module"
+    "dependencies": {
+        "@prisma/client": "^6.10.1",
+        "bcrypt": "^6.0.0",
+        "colors": "^1.4.0",
+        "cookie-parser": "^1.4.7",
+        "cookies": "^0.9.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "http": "^0.0.1-security",
+        "jsonwebtoken": "^9.0.2",
+        "socket.io": "^4.8.1"
+    },
+    "name": "farmer-connect",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "devDependencies": {
+        "nodemon": "^3.1.10",
+        "prisma": "^6.10.1"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "dev": "npm run setup-db && nodemon server.js",
+        "setup-db": "prisma migrate deploy && prisma generate"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "module"
 }
