--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "description": "",
     "main": "server.js",
     "devDependencies": {
+        "@faker-js/faker": "^9.8.0",
         "nodemon": "^3.1.10",
         "prisma": "^6.10.1"
     },
